# dros

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md  Vagrantfile  build.sh  grub.cfg  kernel.c  loader.s  setup.sh
ansible/: dev-playbook.yml
ansible/roles/dev/files/: bashrc  gdbinit
ansible/roles/dev/tasks/: main.yml
arch/i386/: boot.S  io.S  linker.ld  toolchain-gcc-i386.cmake  tty.c
dros/: Makefile
dros/arch/i386/: linker.ld  tty.c
dros/include/: tty.h  vga.h
dros/kernel/: kernel.c
freestanding/: README.md
freestanding/include/: stdio.h  stdlib.h  string.h
freestanding/stdio/: printf.c
freestanding/stdlib/: abort.c
freestanding/string/: memcmp.c  memcpy.c  memset.c
include/: io.h  tty.h  vga.h
kernel/: CMakeLists.txt  kernel.c
libc/: Makefile
libc/include/: stdio.h  string.h
libc/stdio/: putchar.c
libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
